cmake_minimum_required(VERSION 3.10)
project (BlackjackStudy)

set(QT_MIN_VERSION "5.3.0")
set(KF5_MIN_VERSION "5.2.0")
set(CMAKE_INCLUDE_CURRENT_DIR "YES")
set(CMAKE_AUTOMOC "YES")
set(CMAKE_AUTOUIC "YES")
set(CMAKE_INCLUDE_CURRENT_DIR ON)
find_package(ECM 1.7.0 REQUIRED CONFIG)
find_package(Qt5WebKitWidgets)
find_package(Qt5Test REQUIRED)
find_package(ECM 1.0.0 REQUIRED NO_MODULE)
enable_testing()
set(CMAKE_MODULE_PATH ${ECM_MODULE_PATH} ${ECM_KDE_MODULE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Werror")

include(ECMAddAppIcon)
include(ECMInstallIcons)
include(ECMQtDeclareLoggingCategory)
include(ECMSetupVersion)
include(FeatureSummary)
# include(KDECMakeSettings)
include(KDECompilerSettings NO_POLICY_SCOPE)
include(KDEInstallDirs)

find_package(Qt5 ${QT_MIN_VERSION} CONFIG REQUIRED COMPONENTS Core Widgets Svg WebKit)
find_package(KF5 ${KF5_MIN_VERSION} REQUIRED COMPONENTS CoreAddons I18n WidgetsAddons XmlGui ConfigWidgets KIO GuiAddons ItemModels IconThemes)
find_package(KF5KDEGames 4.9.0 REQUIRED)

add_subdirectory(icons)
add_subdirectory(source)
